--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,12 +5,13 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Web site created by Nicolas Cirulli" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,200&family=Poppins:wght@400;700&display=swap"
     rel="stylesheet">
+    <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
   <title>MYTINERARY</title>
 </head>
 
