--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,6 +12,10 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,200&family=Poppins:wght@400;700&display=swap"
     rel="stylesheet">
     <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   <title>MYTINERARY</title>
 </head>
 
